# textgamemanager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Untitled diagram-2024-11-12-101156.mmd  et --hard a8ed75b660ab9fd9ebe0049c09d78ab3ae8a6e97  project_files.txt  구현.txt  실행파일 만드는 명령어.txt  전체구조.mmd  파일추가테스트
include/: agent.hpp  definition.hpp  simple_decorator.hpp  special_agent.hpp  stochastic_decorator.hpp
mermiad/: game-architecture.mermaid  game-flow.mermaid  simple-flow.mermaid  전체구조.mmd
resources/: GameSave.xml  WorldMap.xml
resources/events/: event1.xml  event_10.xml  event_8.xml
src/: agent.cpp  app.cpp  special_agent.cpp
textGameManager/: CMakeLists.txt  project_files.txt
textGameManager/include/Entities/: Ability.h  AbilityFactory.h  AbilityInventory.h  Item.h  Player.h  PlayerStatus.h
textGameManager/include/Entities/Abilities/: AbilityInventory.h  BaseAbility.h  BloodEssence.h  HealthBoost.h  WorldTrapMagazine.h  muscular.h  project_files.txt  tempCodeRunnerFile.h
textGameManager/include/Entities/Items/: BaseItem.h  HealthPotion.h  ItemInventory.h  MentalPotion.h
textGameManager/include/Events/: Choice.h  Event.h
textGameManager/include/Factories/: ItemFactory.h  MonsterFactory.h  NPCFactory.h
textGameManager/include/GameManager/: CombatManager.h  EventManager.h  GameManager.h  InputManager.h  InteractionManager.h  SaveLoadManager.h
textGameManager/include/Interactables/: IInteractable.h
textGameManager/include/Interactables/Monsters/: BaseMonster.h  Dragon.h  Goblin.h  MonsterFactory.h  MonsterRegistration.h
textGameManager/include/Interactables/NPCs/: BaseNPC.h  NpcFactory.h  Shopkeeper.h
textGameManager/include/Interactables/Traps/: BaseTrap.h  Pitfall.h  PitfallTrap.h  PoisonGas.h  PoisonGasTrap.h  TrapFactory.h
textGameManager/include/Utilities/: ConcreteAction.h  GetPotionAction.h  RunAwayAction.h
textGameManager/include/World/: Room.h  WorldMap.h
textGameManager/resources/: PlayerStatus.xml  events.xml  worldmap.xml
textGameManager/resources/events/: event1.xml  event2.xml  event3.xml
textGameManager/src/: main.cpp
textGameManager/src/Entities/: Ability.cpp  AbilityFactory.cpp  AbilityInventory.cpp  Item.cpp  Player.cpp  PlayerStatus.cpp
textGameManager/src/Entities/Abilities/: BaseAbility.cpp  BloodEssence.cpp  Muscular.cpp  WorldTrapMagazine.cpp
textGameManager/src/Entities/Items/: BaseItem.cpp  HealthPotion.cpp  ItemInventory.cpp  MentalPotion.cpp
textGameManager/src/Events/: Choice.cpp  Event.cpp
textGameManager/src/Factories/: AbilityFactory.cpp  ItemFactory.cpp  MonsterFactory.cpp  NPCFactory.cpp  TrapFactory.cpp
textGameManager/src/GameManager/: CombatManager.cpp  EventManager.cpp  GameManager.cpp  InputDecorator.cpp  InputManager.cpp  InteractionManager.cpp  SaveLoadManager.cpp
textGameManager/src/Interactables/Monsters/: BaseMonster.cpp  Dragon.cpp  Goblin.cpp  MonsterFactory.cpp
textGameManager/src/Interactables/NPCs/: BaseNPC.cpp  NPCFactory.cpp  Shopkeeper.cpp
textGameManager/src/Interactables/Traps/: BaseTrap.cpp  Pitfall.cpp  PoisonGas.cpp  PoisonGasTrap.cpp  TrapFactory.cpp
textGameManager/src/Utilities/: ConcreteAction.cpp  FightAction.cpp
textGameManager/src/World/: Room.cpp  WorldMap.cpp
textgamemanager-master/: README.md
textgamemanager-master/textGameManager/src/Events/: Event.cpp
textgamemanager-master/textGameManager/src/GameManager/: EventManager.cpp  InputManager.cpp
